--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -3,5 +3,6 @@
     %h1 Your info
   %fieldset
     = f.text_field :full_name, label: "Full Name"
+    = f.email_field :email, label: "Email Address"
     = f.text_field :message, label: "Public name on the donation"
     = f.submit "Sign Up", class: "btn btn-default"
