--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -1,8 +1,27 @@
-= bootstrap_form_for(@giver) do |f|
+= bootstrap_form_for(@giver, html: {id: "payment-form"}) do |f|
   %header
     %h1 Your info
   %fieldset
     = f.text_field :full_name, label: "Full Name"
     = f.email_field :email, label: "Email Address"
     = f.text_field :message, label: "Public name on the donation"
-    = f.submit "Sign Up", class: "btn btn-default"
+    = f.text_field :amount, label: "Amount of donation"
+    .form-group
+    = label_tag 'Cardholder name'
+    = text_field_tag 'Cardholder name', nil, name: nil, placeholder: 'Cardholder name', data: {'braintree-name' => 'cardholder_name'}, class: 'form-control'
+  .form-group
+    = label_tag 'Card number'
+    = text_field_tag 'Card number', nil, name: nil, placeholder: 'Card number', data: {'braintree-name' => 'number'}, class: 'form-control'
+  .form-group
+    = label_tag 'Cvv number'
+    = text_field_tag 'Cvv number', nil, name: nil, placeholder: 'CVV', data: {'braintree-name' => 'cvv'}, class: 'form-control'
+  .form-group
+    = label_tag 'Month'
+    = text_field_tag 'Month', nil, name: nil, placeholder: 'Month in MM format', data: {'braintree-name' => 'expiration_month'}, class: 'form-control'
+    = label_tag 'Year'
+    = text_field_tag 'Year', nil, name: nil, placeholder: 'Year in YY format', data: {'braintree-name' => 'expiration_year'}, class: 'form-control'
+    = f.submit "Donate", class: "btn btn-default"
+:javascript
+  $(document).ready(function() {
+    braintree_setup();
+  });
