--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,14 @@
 <head>
   <title>Donor</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= include_gon(init: true) %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<%= render 'shared/messages' %>
 <%= yield %>
 
 </body>
