--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,9 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
- *main.css
- *normalize.css
- *safety.css
+ *= normalize
+ *= main
+ *= safety
+ *= require_tree .
  */
