move front to new

--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -1,27 +1,46 @@
-= bootstrap_form_for(@giver, html: {id: "payment-form"}) do |f|
-  %header
-    %h1 Your info
-  %fieldset
-    = f.text_field :full_name, label: "Full Name"
-    = f.email_field :email, label: "Email Address"
-    = f.text_field :message, label: "Public name on the donation"
-    = f.text_field :amount, label: "Amount of donation"
-    .form-group
-    = label_tag 'Cardholder name'
-    = text_field_tag 'Cardholder name', nil, name: nil, placeholder: 'Cardholder name', data: {'braintree-name' => 'cardholder_name'}, class: 'form-control'
-  .form-group
-    = label_tag 'Card number'
-    = text_field_tag 'Card number', nil, name: nil, placeholder: 'Card number', data: {'braintree-name' => 'number'}, class: 'form-control'
-  .form-group
-    = label_tag 'Cvv number'
-    = text_field_tag 'Cvv number', nil, name: nil, placeholder: 'CVV', data: {'braintree-name' => 'cvv'}, class: 'form-control'
-  .form-group
-    = label_tag 'Month'
-    = text_field_tag 'Month', nil, name: nil, placeholder: 'Month in MM format', data: {'braintree-name' => 'expiration_month'}, class: 'form-control'
-    = label_tag 'Year'
-    = text_field_tag 'Year', nil, name: nil, placeholder: 'Year in YY format', data: {'braintree-name' => 'expiration_year'}, class: 'form-control'
-    = f.submit "Donate", class: "btn btn-default"
-:javascript
-  $(document).ready(function() {
-    braintree_setup();
-  });
+%header.logo
+  %p logo
+%main{:role => "main"}
+  %article.donations
+    %p sidebar
+    %h2 donation form
+    = bootstrap_form_for(@giver, html: {id: "payment-form"}) do |f|
+      %fieldset
+        = f.text_field :full_name, label: "Full Name"
+        = f.email_field :email, label: "Email Address"
+        = f.text_field :message, label: "Public name on the donation"
+        = f.text_field :amount, label: "Amount of donation"
+        .form-group
+        = label_tag 'Cardholder name'
+        = text_field_tag 'Cardholder name', nil, name: nil, placeholder: 'Cardholder name', data: {'braintree-name' => 'cardholder_name'}, class: 'form-control'
+      .form-group
+        = label_tag 'Card number'
+        = text_field_tag 'Card number', nil, name: nil, placeholder: 'Card number', data: {'braintree-name' => 'number'}, class: 'form-control'
+      .form-group
+        = label_tag 'Cvv number'
+        = text_field_tag 'Cvv number', nil, name: nil, placeholder: 'CVV', data: {'braintree-name' => 'cvv'}, class: 'form-control'
+      .form-group
+        = label_tag 'Month'
+        = text_field_tag 'Month', nil, name: nil, placeholder: 'Month in MM format', data: {'braintree-name' => 'expiration_month'}, class: 'form-control'
+        = label_tag 'Year'
+        = text_field_tag 'Year', nil, name: nil, placeholder: 'Year in YY format', data: {'braintree-name' => 'expiration_year'}, class: 'form-control'
+        = f.submit "Donate", class: "btn btn-default"
+    %p goes here
+    %p donate button
+    %p sidebar
+  %article
+    %section
+      %h2 Example Content
+      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tempor nunc ut condimentum. Vivamus vel lobortis velit. Donec sollicitudin efficitur lorem quis pretium. Aliquam et quam eget ipsum mollis suscipit suscipit vitae libero. Aliquam scelerisque ipsum magna, id ultrices tellus vestibulum ac. Cras commodo libero eget tincidunt pulvinar. Aliquam erat volutpat. Donec facilisis quam facilisis, sagittis eros vel, dapibus ex. Vivamus posuere mi a velit ultrices cursus ac eu nunc. Donec a varius risus.
+    %section
+      %h2 Example Content
+      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tempor nunc ut condimentum. Vivamus vel lobortis velit. Donec sollicitudin efficitur lorem quis pretium. Aliquam et quam eget ipsum mollis suscipit suscipit vitae libero. Aliquam scelerisque ipsum magna, id ultrices tellus vestibulum ac. Cras commodo libero eget tincidunt pulvinar. Aliquam erat volutpat. Donec facilisis quam facilisis, sagittis eros vel, dapibus ex. Vivamus posuere mi a velit ultrices cursus ac eu nunc. Donec a varius risus.
+  %article
+    %section
+      %h2 Example Content
+      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tempor nunc ut condimentum. Vivamus vel lobortis velit. Donec sollicitudin efficitur lorem quis pretium. Aliquam et quam eget ipsum mollis suscipit suscipit vitae libero. Aliquam scelerisque ipsum magna, id ultrices tellus vestibulum ac. Cras commodo libero eget tincidunt pulvinar. Aliquam erat volutpat. Donec facilisis quam facilisis, sagittis eros vel, dapibus ex. Vivamus posuere mi a velit ultrices cursus ac eu nunc. Donec a varius risus.
+    %section
+      %h2 Example Content
+      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tempor nunc ut condimentum. Vivamus vel lobortis velit. Donec sollicitudin efficitur lorem quis pretium. Aliquam et quam eget ipsum mollis suscipit suscipit vitae libero. Aliquam scelerisque ipsum magna, id ultrices tellus vestibulum ac. Cras commodo libero eget tincidunt pulvinar. Aliquam erat volutpat. Donec facilisis quam facilisis, sagittis eros vel, dapibus ex. Vivamus posuere mi a velit ultrices cursus ac eu nunc. Donec a varius risus.
+%footer
+  %p footer
