Updated styles for donation form

--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -3,7 +3,7 @@
 %main{:role => "main"}
   %article.donations
     %section.donate-form
-      %h2 donation form
+      %h2 Please Help: Donate Here
       = bootstrap_form_for(@giver, html: {id: "payment-form"}) do |f|
         %fieldset
           = f.text_field :full_name, label: "Full Name"
