--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -52,10 +52,10 @@ footer {
 	border: 1px #222 solid;
 }
 
-/* Donation Form and Sidebar */
+/* Articles, Donation Form and Sidebar */
 
 main article {
-	border: 1px #222 solid;
+	border: 2px purple solid;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:1em;
@@ -65,6 +65,9 @@ main article {
 	min-width:250px;
 	display:block;
 	background-color:#EEE;
+
+  border-radius: 6px;
+  box-shadow: inset 0 0 9em -3em purple, 5px 5px 15px grey;
 }
 
 main article.donations {
@@ -80,6 +83,7 @@ main article.donations {
   min-width: 20em;
   background-color: none;
   background:none;
+  box-shadow: none;
 }
 
 main article.donations section {
@@ -88,6 +92,11 @@ main article.donations section {
   border-radius: 8px;
   margin-bottom: 1em;
 	padding:1em;
+  box-shadow: inset 0 0 7em -2em purple, 5px 5px 15px grey;
+}
+
+main article.donations section h2 {
+  margin:0;
 }
 
 main article.donations label {
@@ -97,13 +106,46 @@ main article.donations label {
   color: #656565;
 }
 
+main article.donations input.btn {
+  background-color: #F8F;
+  display:block;
+  margin: 1em;
+  margin-left: auto;
+  margin-right:auto;
+  margin-bottom: 0em;
+  padding: 0.5em;
+  padding-left: 3em;
+  padding-right: 3em;
+  border: 3px outset;
+  border-radius: 0.35em;
+  border-bottom-color: #F8F;
+  border-right-color: #F8F;
+  border-left-color: #FBF;
+  border-top-color: #FBF;
+  font-weight: bolder;
+  box-shadow: 3px 3px 12px -2px black;
+}
+
+main article.donations input.btn:hover {
+  color: #fff;
+  text-shadow: 0 0 3px 0px white;
+  box-shadow: 3px 3px 15px 0px black;
+}
+
+main article.donations input.btn:active {
+  color: #fff;
+  text-shadow: 0 0 18px 3px white;
+  border: 3px inset;
+  box-shadow: inset 3px 3px 9px -2px black;
+}
+
 
 @media only screen and (min-width: 45em) and (min-height: 40em) {
 	main {
 		border: 1px #222 dotted;
 		margin-left:auto;
 		margin-right:auto;
-		padding-left:18em;
+		padding-left:19em;
 		padding-right:1em;
 	}
 
