--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -1,7 +1,7 @@
 /* Major Formatting and Layout */
 
 html {
-	background:#888;
+	background:#643571;
 	padding-left:2em;
 	padding-right:2em;
 }
@@ -9,11 +9,12 @@ html {
 body {
 	position:relative;
 	border: 3px #222 solid;
-	background-color:#BBB;
+	background-color:#F7F5E7;
 
 	margin-top:3em;
 	margin-left:auto;
 	margin-right:auto;
+  margin-bottom: 2em;
 
 	min-width:450px;
 	max-width:60em;
@@ -22,6 +23,8 @@ body {
 	padding-right:0em;
 	padding-top:2em;
 	padding-bottom:0em;
+  box-shadow:0px 0px 5px black;
+
 }
 
 header.logo {
@@ -64,14 +67,15 @@ main article {
 	max-width:30em;
 	min-width:250px;
 	display:block;
-	background-color:#EEE;
+	background-color:#E8DAF9;
 
   border-radius: 6px;
-  box-shadow: inset 0 0 9em -3em purple, 5px 5px 15px grey;
+  box-shadow: inset 0 0 9em -3em #D3B3FC, 5px 5px 15px grey;
 }
 
 main article.donations {
-	border: 1px #DF4444 solid;
+	/*border: 1px #DF4444 solid;*/
+  border: none;
 	/*background-color:#DADADA;*/
 	display:block;
 	z-index:10;
@@ -87,12 +91,12 @@ main article.donations {
 }
 
 main article.donations section {
-  background:#AAA;
-  border: 2px #333 solid;
+  background:#F7F5E7;
+  border: 2px orange solid;
   border-radius: 8px;
   margin-bottom: 1em;
 	padding:1em;
-  box-shadow: inset 0 0 7em -2em purple, 5px 5px 15px grey;
+  box-shadow: inset 0 0 7em -2em orange, 5px 5px 15px grey;
 }
 
 main article.donations section h2 {
@@ -106,8 +110,16 @@ main article.donations label {
   color: #656565;
 }
 
+main article.donations input.form-control {
+  border-radius: 6px;
+  border-width: 2px;
+  padding: 4px;
+  border-style: solid;
+  border-color: orange;
+}
+
 main article.donations input.btn {
-  background-color: #F8F;
+  background-color: #E2BAE2;
   display:block;
   margin: 1em;
   margin-left: auto;
@@ -142,7 +154,7 @@ main article.donations input.btn:active {
 
 @media only screen and (min-width: 45em) and (min-height: 40em) {
 	main {
-		border: 1px #222 dotted;
+		/*border: 1px #222 dotted;*/
 		margin-left:auto;
 		margin-right:auto;
 		padding-left:19em;
