--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -39,7 +39,7 @@ header.logo {
 	margin-right:auto;
 
 	border: 1px #222 solid;
-	background:#FFF;
+	background:none;
 	display:block;
 }
 
@@ -74,13 +74,12 @@ main article {
 }
 
 main article.donations {
-	/*border: 1px #DF4444 solid;*/
-  border: none;
-	/*background-color:#DADADA;*/
+	border: none;
 	display:block;
 	z-index:10;
-	position:relative;
+	position:static; /* must be static to disable scrolling on small screens */
  	padding:0em;
+  top:auto; /* used for moving it up and down the page when scrolling */
 }
 
 main article.donations {
@@ -101,6 +100,7 @@ main article.donations section {
 
 main article.donations section h2 {
   margin:0;
+  text-align:center;
 }
 
 main article.donations label {
@@ -108,6 +108,16 @@ main article.donations label {
   font-size: smaller;
   font-weight: bolder;
   color: #656565;
+}
+
+main article.donations input:focus {
+  border-radius: 6px;
+  border-width: 2px;
+  padding: 4px;
+  border-style: solid;
+  border-color: green;
+  box-shadow: inset 0px 0px 12px orange;
+  outline:none;
 }
 
 main article.donations input.form-control {
@@ -129,7 +139,7 @@ main article.donations input.btn {
   padding-left: 3em;
   padding-right: 3em;
   border: 3px outset;
-  border-radius: 0.35em;
+  border-radius: 1.5em;
   border-bottom-color: #F8F;
   border-right-color: #F8F;
   border-left-color: #FBF;
@@ -148,6 +158,7 @@ main article.donations input.btn:active {
   color: #fff;
   text-shadow: 0 0 18px 3px white;
   border: 3px inset;
+  border-color: #FBF;
   box-shadow: inset 3px 3px 9px -2px black;
 }
 
