--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -1,5 +1,5 @@
 %header.logo
-  %p logo
+  =image_tag "layout/annaleah_and_mary_for_truck_safety_logo_web_midl.png"
 %main{:role => "main"}
   %article.donations
     %section.donate-form
