--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -11,7 +11,7 @@ body {
 	border: 3px #222 solid;
 	background-color:#F7F5E7;
 
-	margin-top:3em;
+	margin-top:5em;
 	margin-left:auto;
 	margin-right:auto;
   margin-bottom: 2em;
@@ -21,7 +21,7 @@ body {
 
 	padding-left:0em;
 	padding-right:0em;
-	padding-top:2em;
+	padding-top:3.5em;
 	padding-bottom:0em;
   box-shadow:0px 0px 5px black;
 
@@ -32,19 +32,27 @@ header.logo {
 	alignment-baseline:central;
 	vertical-align:central;
 	text-align:center;
-	top:-1.5em;
+	top:-3.8em;
 	left:0;
 	right:0;
 	margin-left:auto;
 	margin-right:auto;
 
-	border: 1px #222 solid;
+	/*border: 1px #222 solid;*/
+  border: none;
 	background:none;
 	display:block;
 }
 
+header.logo img {
+  border: 3px black solid;
+}
+
 main {
-	border: 1px #222 dotted;
+	/*border: 1px #222 dotted;*/
+  display:block;
+  overflow:hidden;
+
 	margin-left:auto;
 	margin-right:auto;
 	padding-left:1em;
@@ -52,13 +60,20 @@ main {
 }
 
 footer {
-	border: 1px #222 solid;
+	border-top: 1px #222 solid;
+  background: #F0f0f0;
+  bottom:0;
+  margin-bottom:0;
+  margin-top:2em;
+  height:100%;
+  text-align:center;
+  box-shadow: inset 0 0 45px -20px grey;
 }
 
 /* Articles, Donation Form and Sidebar */
 
 main article {
-	border: 2px purple solid;
+	border: 1px #C9A9F3 solid;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:1em;
@@ -70,7 +85,7 @@ main article {
 	background-color:#E8DAF9;
 
   border-radius: 6px;
-  box-shadow: inset 0 0 9em -3em #D3B3FC, 5px 5px 15px grey;
+  box-shadow: inset 0 0 9em -1em #C9A9F3, 2px 2px 15px -2px grey;
 }
 
 main article.donations {
