Responsive mobile styles

--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -1,6 +1,8 @@
 %header.logo
   =image_tag "layout/annaleah_and_mary_for_truck_safety_logo_web_midl.png"
-%main{:role => "main"}
+%main.main{:role => "main"}
+  :javascript
+    scrollHandler();
   %article.donations
     %section.donate-form
       %h2 Please Help: Donate Here
