--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -2,8 +2,8 @@
 
 html {
 	background:#643571;
-	padding-left:2em;
-	padding-right:2em;
+	padding-left:0em;
+	padding-right:0em;
 }
 
 body {
@@ -94,7 +94,7 @@ main article.donations {
 	z-index:10;
 	position:static; /* must be static to disable scrolling on small screens */
  	padding:0em;
-  top:auto; /* used for moving it up and down the page when scrolling */
+  top:55px; /* used for moving it up and down the page when scrolling */
 }
 
 main article.donations {
@@ -189,8 +189,16 @@ main article.donations input.btn:active {
 
 /* Alternate styles that break the donation box out to the side when the window is big enough. */
 
-@media only screen and (min-width: 45em) and (min-height: 40em) {
-	main {
+@media only screen and (min-width: 750px) {
+  html {
+		padding-left:2em;
+	  padding-right:2em;
+  }
+}
+
+@media only screen and (min-width: 45em) and (min-height: 40em) and (min-width: 800px) {
+
+	main.support-scrolling {
 		/*border: 1px #222 dotted;*/
 		margin-left:auto;
 		margin-right:auto;
@@ -198,7 +206,7 @@ main article.donations input.btn:active {
 		padding-right:1em;
 	}
 
-	main article.donations {
+	main.support-scrolling article.donations {
 		/*background-color:#AFA;*/
 		position:absolute;
 		left:-1.9em;
