Input form validation and warning message styling

--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -10,6 +10,10 @@
     %section.donate-chart
       %h2 Donated So Far
       %p.donation-amount VALUE
+      %p
+        from
+        %span.donation-donors 000
+        people
   %article
     %section
       %h2 Example Content
