--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -177,11 +177,58 @@ main article.donations input.btn:active {
   box-shadow: inset 3px 3px 9px -2px black;
 }
 
+/* Validation and warnings */
+
+main article.donations .error {
+  color: maroon;
+}
+
+main article.donations .warning {
+  color: red;
+}
+
+main article.donations span.help-block {
+  color: red;
+  font-weight: bolder;
+  display:block;
+}
+
+div.alert-danger {
+  font-weight: bolder;
+  font-size: larger;
+  text-align: center;
+  border: 1px black solid;
+  background-color: red;
+  margin:auto;
+
+}
+div.alert-danger a.close {
+  text-align: right;
+  right: 0;
+  position:relative;
+}
+
+main article.donations input.form-control.error {
+  border-color: red;
+  background-color: pink;
+}
+
 /* Chart and stats styles */
 
-.donation-amount {
-  color: green;
+section.donate-chart {
+  text-align: center;
+  font-size: x-large;
+}
+
+section.donate-chart p {
   font-size: xx-large;
+  margin-top:0;
+}
+
+
+.donation-amount, .donation-donors {
+  color: green;
+  font-size: larger;
   font-weight: bolder;
   text-align: center;
   margin:0;
