--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -15,20 +15,7 @@
         from
         %span.donation-donors 000
         people
-  %article
-    %section
-      %h2 Example Content
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tempor nunc ut condimentum. Vivamus vel lobortis velit. Donec sollicitudin efficitur lorem quis pretium. Aliquam et quam eget ipsum mollis suscipit suscipit vitae libero. Aliquam scelerisque ipsum magna, id ultrices tellus vestibulum ac. Cras commodo libero eget tincidunt pulvinar. Aliquam erat volutpat. Donec facilisis quam facilisis, sagittis eros vel, dapibus ex. Vivamus posuere mi a velit ultrices cursus ac eu nunc. Donec a varius risus.
-    %section
-      %h2 Example Content
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tempor nunc ut condimentum. Vivamus vel lobortis velit. Donec sollicitudin efficitur lorem quis pretium. Aliquam et quam eget ipsum mollis suscipit suscipit vitae libero. Aliquam scelerisque ipsum magna, id ultrices tellus vestibulum ac. Cras commodo libero eget tincidunt pulvinar. Aliquam erat volutpat. Donec facilisis quam facilisis, sagittis eros vel, dapibus ex. Vivamus posuere mi a velit ultrices cursus ac eu nunc. Donec a varius risus.
-  %article
-    %section
-      %h2 Example Content
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tempor nunc ut condimentum. Vivamus vel lobortis velit. Donec sollicitudin efficitur lorem quis pretium. Aliquam et quam eget ipsum mollis suscipit suscipit vitae libero. Aliquam scelerisque ipsum magna, id ultrices tellus vestibulum ac. Cras commodo libero eget tincidunt pulvinar. Aliquam erat volutpat. Donec facilisis quam facilisis, sagittis eros vel, dapibus ex. Vivamus posuere mi a velit ultrices cursus ac eu nunc. Donec a varius risus.
-    %section
-      %h2 Example Content
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tempor nunc ut condimentum. Vivamus vel lobortis velit. Donec sollicitudin efficitur lorem quis pretium. Aliquam et quam eget ipsum mollis suscipit suscipit vitae libero. Aliquam scelerisque ipsum magna, id ultrices tellus vestibulum ac. Cras commodo libero eget tincidunt pulvinar. Aliquam erat volutpat. Donec facilisis quam facilisis, sagittis eros vel, dapibus ex. Vivamus posuere mi a velit ultrices cursus ac eu nunc. Donec a varius risus.
+  = render "content"
 %footer
   %p footer
 :javascript
