--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -1,3 +1,13 @@
+<article class="images">
+  <section class="slideshow" id="slideshow_test">
+    <div data-u="slides" class="slideshow">
+      <div><img data-u="image" src ="assets/layout/annaleah_and_mary_for_truck_safety_logo_web.png"/></div>
+      <div><img data-u="image" src ="assets/layout/annaleah_and_mary_for_truck_safety_logo_web.png"/></div>
+      <div><img data-u="image" src ="assets/layout/annaleah_and_mary_for_truck_safety_logo_web.png"/></div>
+    </div>
+  </section>
+</article>
+
 <article>
   <section>
     <p>On May 4, 2013, four members of the Karth family (a mother and the 3 youngest of her 9 children) drove from North Carolina to Texas to celebrate four family college graduations and the wedding of one of those siblings. While in Georgia, their car – in the right lane – was hit by a truck in the left lane that did not stop in time for slowed traffic and was charged with failure to maintain lane. The impact spun their car around and the truck hit their car a second time, forcing it backward and underneath a second truck’s trailer. That truck then also ran into the side of the second truck.</p>
