--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width">
-
+  <link href='https://fonts.googleapis.com/css?family=Signika:400,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
