Removed test image

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -1,9 +1,7 @@
 <article class="images">
   <section class="slideshow" id="slideshow_test">
     <div data-u="slides" class="slideshow">
-      <div><img data-u="image" src ="assets/layout/annaleah_and_mary_for_truck_safety_logo_web.png"/></div>
-      <div><img data-u="image" src ="assets/layout/annaleah_and_mary_for_truck_safety_logo_web.png"/></div>
-      <div><img data-u="image" src ="assets/layout/annaleah_and_mary_for_truck_safety_logo_web.png"/></div>
+      <div><!-- img goes here --></div>
     </div>
   </section>
 </article>
