--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -1,7 +1,7 @@
 <article class="images">
   <section class="slideshow" id="slideshow_test">
     <div data-u="slides" class="slideshow">
-      <div><!-- img goes here --></div>
+      <div><!-- img goes here --></div>rak
     </div>
   </section>
 </article>
