--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -6,11 +6,9 @@
   </section>
 </article>
 -->
-
 <article>
   <section>
-    <h1>Save Lives</h1>
-    <h2>Donate to Truck Safety Research</h2>
+
     <p>Imagine the back of a semi-truck trailer.</p>
 
     <p>It's hard to imagine that a car could fit under there. There are bars, called underride guards, at the back of the truck to stop cars from riding under the truck.</p>
@@ -25,15 +23,20 @@
     </blockquote>
     <p>In 2013, our family found that out the hard way. I was traveling with my 3 youngest children when we were struck from behind by a semi-truck. It spun us around and hit us a second time pushing our car under the truck in front of us.</p>
   </section>
-
+</article>
+<article>
   <section>
     <p>AnnaLeah (17) and Mary (13) were in the backseat when the rear of the car was pushed under the truck. Both of them died. AnnaLeah wanted to be a writer and Mary wanted to be famous, neither of them got to see their dreams come true.</p>
   </section>
+</article>
+<article>
   <section>
     <h1>Lives CAN BE Saved!</h1>
     <p>Last year our family was successful in collecting and delivering more than 11,000 signatures in a petition to the Department of Transportation to make changes. Progress is being made toward stricter laws, but the industry needs better options.</p>
     <p>Research must be done to offer the trucking industry affordable technologies that protect our families on the road.</p>
   </section>
+</article>
+<article>
   <section>
     <p>Our family started AnnaLeah and Mary for Truck Safety, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the truck in front of us had a guard that prevented our car from going under it, AnnaLeah and Mary would be here today.</p>
     <ul>
@@ -42,6 +45,8 @@
       <li>We are working with universities and their engineering programs to get more engineers thinking and working toward real life solutions to this problem.</li>
     </ul>
   </section>
+</article>
+<article>
   <section>
     <h1>We Can't Do It Alone<br />We Need YOUR Help!</h1>
     <ul>
