--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -3,6 +3,7 @@
 %main.main{:role => "main"}
   :javascript
     scrollHandler();
+  = render "headline"
   %article.donations
     %section.donate-form
       %h2 Please Help: Donate Here
