Added collapsable articles

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -58,3 +58,9 @@
     <p>~The Karth Family</p>
   </section>
 </article>
+<article class="retractable smallprint" id="privacy-statement">
+    <h1 class="noselect">Privacy Statement</h1>
+  <section>
+    <p>Lorem Ipsum</p>
+  </section>
+</article>
