--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -337,6 +337,35 @@ div.return p {
   margin: 0;
 }
 
+/* Retractable */
+article.retractable {
+
+}
+
+article.retractable:hover {
+  background-color: #262a76;
+  color: #ccc;
+}
+
+article.retractable h1 {
+  cursor: pointer;
+  display:block;
+}
+article.retractable h1:hover {
+  color:#eee;
+  text-shadow: 0px 0px 5px #444;
+}
+article.retractable h1:active {
+  color:#444;
+  text-shadow: 0px 0px 5px #444;
+}
+
+/* Small Print */
+
+article.smallprint p {
+  font-size: smaller;
+}
+
 /* Slideshows */
 
 main article.images {
