Privacy policy hiding/revealing, etc.

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -58,9 +58,21 @@
     <p>~The Karth Family</p>
   </section>
 </article>
-<article class="retractable smallprint" id="privacy-statement">
-    <h1 class="noselect">Privacy Statement</h1>
+<article class="retractable all-hidden" id="disclaimer">
   <section>
+    <h1 class="noselect">Disclaimer</h1>
+    <p>Lorem Ipsum</p>
+  </section>
+</article>
+<article class="retractable all-hidden" id="privacy-statement">
+  <section>
+    <h1 class="noselect">Privacy Statement</h1>
+    <p>Lorem Ipsum</p>
+  </section>
+</article>
+<article class="retractable all-hidden" id="terms-of-use">
+  <section>
+    <h1 class="noselect">Terms of Use</h1>
     <p>Lorem Ipsum</p>
   </section>
 </article>
