Make checks out to

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -58,12 +58,18 @@
     <p>~The Karth Family</p>
   </section>
 </article>
+<article>
+  <section>
+    <p>If you'd like to donate by check, rather than credit card, please make your payments out to:</p>
+    
+  </section>
+</article>
 <article class="retractable all-hidden" id="disclaimer">
   <section>
     <h1 class="noselect">Disclaimer</h1>
     <h2>http://www.fortrucksafety.com</h2>
     <h2>By AnnaLeah and Mary For Truck Safety</h2>
-    <p>We are a 501(c)3 non-profit organization. We will not use money from this or any other fundraising campaign for personal gain. However, we reserve the right to use the funds as we see fit to meet our general purpose of increasing awareness and funding research for truck safety. Therefore funds may be used for, but not limited to specific research projects, awareness campaigns, general overhead costs, mailings, travel and expenses, and for paying for services when donated services can not be obtained. If at any time the organization should hire personnel for any position, funds raised may also be used to pay that person a reasonable wage.</p>
+    <p>We are a 501(c)3 non-profit organization. We will not use money from this or any other fundraising campaign for personal gain. However, we reserve the right to use the funds as we see fit to meet our general purpose of increasing awareness and funding research for truck safety. Therefore funds may be used for, but not limited to, specific research projects, awareness campaigns, general overhead costs, mailings, travel and expenses, and for paying for services when donated services can not be obtained. If at any time the organization should hire personnel for any position, funds raised may also be used to pay that person a reasonable wage.</p>
     <p>Last Updated: September 1, 2015</p>
   </section>
 </article>
