--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -61,14 +61,21 @@ main {
 }
 
 footer {
-	border-top: 1px #222 solid;
-  background: #F0f0f0;
+	border-top: 1px #bb9 solid;
+  /*background: #F0f0f0;*/
   bottom:0;
   margin-bottom:0;
   margin-top:2em;
   height:100%;
   text-align:center;
+  position:relative;
+  display:block;
   box-shadow: inset 0 0 45px -20px grey;
+  padding: 1em;
+}
+footer p {
+  margin-top:0;
+  margin-bottom:0;
 }
 
 /* Fonts and Text */
