--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -126,6 +126,18 @@ main article {
   box-shadow: inset 0 0 9em -1em #91b6f9, 2px 2px 15px -2px grey;
 }
 
+main article section img {
+  width:100%;
+}
+
+main article .caption {
+  font-family: 'Signika', Verdana, sans-serif;
+  font-size: smaller;
+  margin-top:0;
+  margin-left:0;
+  text-align: right;
+}
+
 main article.video {
   max-width:33em;
 	padding: 0px;
