--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -8,6 +8,7 @@
 -->
 <article>
   <section>
+    <img src="/assets/content/truck_rear_underride_guard_cropped.jpg" alt="Photo of the rear of a truck from the side, showing the metal bars that form the underride guard at the back of the truck.">
 
     <p>Imagine the back of a semi-truck trailer.</p>
 
@@ -24,6 +25,11 @@
     <p>In 2013, our family found that out the hard way. I was traveling with my 3 youngest children when we were struck from behind by a semi-truck. It spun us around and hit us a second time pushing our car under the truck in front of us.</p>
   </section>
 </article>
+<article class="images">
+  <section>
+    <img src="/assets/content/car_under_truck_800.jpg" alt="Photo of our blue Ford Crown Victoria car, with the rear of the car forced under the back of the truck trailer from the collision. Most of the car is nearly unrecognizable from the damage There is a sheet covering part of the car. There is blood on the sheet.">
+  </section>
+</article>
 <article>
   <section>
     <p>AnnaLeah (17) and Mary (13) were in the backseat when the rear of the car was pushed under the truck. Both of them died. AnnaLeah wanted to be a writer and Mary wanted to be famous, neither of them got to see their dreams come true.</p>
@@ -38,6 +44,8 @@
 </article>
 <article>
   <section>
+    <img src="/assets/content/SAFER_Barrier_crash_photo.jpg" alt="Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.">
+    <p class="caption">Photo courtesy of X</p>
     <p>Our family started AnnaLeah and Mary for Truck Safety, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the truck in front of us had a guard that prevented our car from going under it, AnnaLeah and Mary would be here today.</p>
     <ul>
       <li>Dean Sicking has saved lives through the SAFER barrier he designed for NASCAR. He is interested in taking this technology and using it in underride guards.</li>
@@ -61,7 +69,7 @@
 <article>
   <section>
     <p>If you'd like to donate by check, rather than credit card, please make your payments out to:</p>
-    
+
   </section>
 </article>
 <article class="retractable all-hidden" id="disclaimer">
